configurações de deploy

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
+  "homepage": "https://GuilhermeMarques11.github.io/github-profile-search",
   "name": "perfil-github",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://GuilhermeMarques11.github.io/github-profile-search",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.0.0",
